crates/panache-parser/tests/snapshots/yaml__yaml_suite_MUS6__02.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: MUS6/02
input: "%YAML  1.1\n---\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
