crates/panache-parser/tests/snapshots/yaml__yaml_suite_MUS6__06.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: MUS6/06
input: "%YAMLL 1.1\n---\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
